# crypto-model

./: .gitignore  README.rst  __init__.py  avery_reference_code.py  backtrader_playground.ipynb  building data retrieval.ipynb  database.py  first_model.py  get_crypto_data.py  pyfolio.ipynb  requirements.txt  setup.cfg  template.py  test_avery_reference_code.py  tox.ini
backtest/: backtrader_quickstart.py  rba_backtrader_set.py  template.py  using-quantstats.py
crypto_data/: MarketDataAEBTC.csv  MarketDataAKROBTC.csv  MarketDataALPHABTC.csv  MarketDataAMBBTC.csv  MarketDataATOMBTC.csv  MarketDataBANDBTC.csv  MarketDataBATBTC.csv  MarketDataBCDBTC.csv  MarketDataBEAMBTC.csv  MarketDataBLZBTC.csv  MarketDataCHATBTC.csv  MarketDataCOCOSBTC.csv  MarketDataCOMPBTC.csv  MarketDataCTKBTC.csv  MarketDataCTSIBTC.csv  MarketDataDOCKBTC.csv  MarketDataDREPBTC.csv  MarketDataEVXBTC.csv  MarketDataFLMBTC.csv  MarketDataFTMBTC.csv  MarketDataFUELBTC.csv  MarketDataFUNBTC.csv  MarketDataGASBTC.csv  MarketDataGNTBTC.csv  MarketDataGTOBTC.csv  MarketDataHIVEBTC.csv  MarketDataICNBTC.csv  MarketDataICXBTC.csv  MarketDataKSMBTC.csv  MarketDataMATICBTC.csv  MarketDataMBLBTC.csv  MarketDataNASBTC.csv  MarketDataNKNBTC.csv  MarketDataNPXSBTC.csv  MarketDataOAXBTC.csv  MarketDataPAXBTC.csv  MarketDataPAXGBTC.csv  MarketDataPERLBTC.csv  MarketDataPHBBTC.csv  MarketDataPNTBTC.csv  (+19 more)
examples/: template.py
notebooks/: backtrader_multiple_timeframe_playground.ipynb  backtrader_playground.ipynb  backtrader_plot_playground.ipynb  building data retrieval.ipynb  custom_strategy_playground.ipynb  (+4 more)
(+77 files in other folders)
