[metadata]
name = rba_tools
version = 0.1.0
license = GNU General Public License v3.0
description = tools for retrieving, backtesting, and analyzing stock or stock-lookalike (e.g. cryptocurrency) data
long_description = file: README.rst
author = Avery Pustina
author_email = n/a
classifiers=
   Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas
   ccxt
   plotly
   backtrader

[options.packages.find]
where=src